--- a/disneylinebuddy/css/mainpage.css
+++ b/disneylinebuddy/css/mainpage.css
@@ -408,7 +408,38 @@ select {
 .weatherReport ul li:first-child {
   text-align: center;
 }
+.forecastBox {
+max-width: 80%;
+margin: 1rem auto;
+}
+.forecastTitle {
+  padding: 1rem 0;
+  display: flex;
+  justify-content: space-between
+}
+.forecastTitle h4 {
+  font-size: 1.5rem;
+}
+.forecastList li {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  grid-template-rows: auto;
+  align-items: center;
+}
+.forecastList li span,
+.forecastList li p {
+  text-align: right;
+}
+.forecastBox h5 {
+  font-size: 1.3rem;
+}
+.forecastList li h5 {
 
+  grid-row: 1/3;
+}
+.forecastList li p {
+  grid-column: 2/3;
+}
 
 /* ****************** tic tac toe page *************** */
 .tictactoePage {
