--- a/disneylinebuddy/css/mainpage.css
+++ b/disneylinebuddy/css/mainpage.css
@@ -49,6 +49,11 @@ header {
   padding: 2rem;
   min-height: 8vh;
 }
+footer {
+      position: absolute;
+      top: 92%;
+      left: 35%;
+}
 
 .mainPage {
   min-height: 90vh;
@@ -202,6 +207,7 @@ label {
   font-weight: bold;
   margin-inline-end: 10%;
   border: none;
+  cursor: pointer;
 }
 
 .button:focus {
@@ -347,6 +353,7 @@ label {
 
 .weatherWrapper h2 {
   margin: 1rem;
+  text-align: center;
 }
 
 .parkList {
@@ -404,13 +411,13 @@ select {
   font-size: 1.2rem;
 }
 
-.weatherReport h3,
-.weatherReport ul li:first-child {
+.weatherReport h3{
   text-align: center;
 }
 .forecastBox {
 max-width: 80%;
 margin: 1rem auto;
+
 }
 .forecastTitle {
   padding: 1rem 0;
@@ -422,23 +429,35 @@ margin: 1rem auto;
 }
 .forecastList li {
   display: grid;
-  grid-template-columns: 3fr 2fr;
+  grid-template-columns: 1fr 4fr 2fr;
   grid-template-rows: auto;
   align-items: center;
+  padding: 1rem;
 }
 .forecastList li span,
 .forecastList li p {
   text-align: right;
+   grid-column: 3/4;
 }
 .forecastBox h5 {
   font-size: 1.3rem;
+  padding-left: .3rem;
 }
 .forecastList li h5 {
-
+grid-column: 2/3;
   grid-row: 1/3;
 }
 .forecastList li p {
-  grid-column: 2/3;
+  /* grid-column: 3/4; */
+}
+.forecastList li:nth-child(odd) {
+  background-color: var(--light-blue);
+}
+.liMickey {
+  grid-column: 1;
+  grid-row: 1/3;
+  width: 35px;
+  height:35px;
 }
 
 /* ****************** tic tac toe page *************** */
@@ -498,7 +517,7 @@ margin: 1rem auto;
 }
 
 select,
-label {
+label, option {
   padding: .5rem;
   font-size: 1.5rem;
 }
@@ -511,6 +530,36 @@ label {
 .tictactoePage h2 {
   text-align: center;
   font-size: 2rem;
+}
+/* .popupWrapper {
+  display: flex;
+  justify-content: center;
+} */
+
+.popup {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  height: 80%;
+  width: 80%;
+  opacity: 95%;
+  background-color: var(--yellow);
+ display: flex;
+ flex-direction: column;
+ justify-content: space-around;
+}
+.popup h2 {
+  filter:drop-shadow(0px 0px 0px black);
+  vertical-align: middle;
+}
+
+.closebutton {
+  font-size: 3rem;
+  cursor: pointer;
+  padding: 2rem;
+}
+.hide {
+  display: none;
 }
 
 /* ******************** Dash Game ****************** */
