Everything is working. Commit before working on fixing the welcome page animation.

--- a/disneylinebuddy/css/mainpage.css
+++ b/disneylinebuddy/css/mainpage.css
@@ -328,6 +328,7 @@ label {
   flex-direction: column;
   justify-content: center;
   border-radius: 15px;
+  color: var(--white);
 }
 
 .trivia-card-front {
