--- a/disneylinebuddy/css/main.css
+++ b/disneylinebuddy/css/main.css
@@ -18,6 +18,7 @@
 body {
   position: relative;
   overflow: hidden;
+    /* height: 90vh; */
 }
 .copyright {
   position:fixed;
@@ -282,6 +283,27 @@ main {
 }
 .tileList li {
   cursor:pointer;
+}
+.navTileBox, .tileList {
+  /* position: absolute;
+  z-index: 99; */
+}
+.WelcomePage li {
+
+}
+.WelcomePage .tileSquare:hover {
+  border-color: hsla(40, 79%, 54%, .1);
+}
+.WelcomePage .tileSquare:focus {
+  width: 95px;
+  height: 95px;
+  border-color: hsla(40, 79%, 54%, .5);
+}
+
+.WelcomePage .tileSquare:active {
+  width: 95px;
+  height: 95px;
+  border-color: hsla(40, 79%, 54%, .5);
 }
 .mainPage {
   background-color: var(--almond);
